--- a/waifu.zoneplay.vn/huong-dan/huong-dan-nap-game-waifu-party-gzone.html
+++ b/waifu.zoneplay.vn/huong-dan/huong-dan-nap-game-waifu-party-gzone.html
@@ -27,7 +27,7 @@
 <html lang="en">
 
 
-<!-- Mirrored from waifu.zoneplay.vn/huong-dan/huong-dan-nap-game-waifu-party-gzone by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 14 Aug 2025 12:40:36 GMT -->
+%n
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
     <meta charset="UTF-8">
@@ -541,7 +541,10 @@
                             </div>
                         </div>
                         <div class="link_download">
-                                                                                </div>
+                                                                                        <a href= https://apps.apple.com/vn/app/id6741651912>
+                                    <img src="https://cdn.gzone.tech/g29/home2024-11-19/publics/images/down-appstore.png" width="100%" alt="">
+                                </a>
+                                                    </div>
                         <div class="btn_menu_mobile">
                             <div class="item_menu top"></div>
                             <div class="item_menu center"></div>
@@ -700,7 +703,7 @@
 
 <p>&nbsp;</p>
 
-<p>Mọi thắc mắc hay sự cố ph&aacute;t sinh trong qu&aacute; tr&igrave;nh nạp c&aacute;c Chủ Nh&acirc;n c&oacute; thể li&ecirc;n hệ về <a href="https://www.facebook.com/waifu.gzone"><span style="color:#e74c3c;"><strong>inbox Fanpage</strong></span></a>, hotline&nbsp;<span style="color:#e74c3c;"><strong>1900088885</strong></span> hoặc website hỗ trợ:&nbsp;<span style="color:#e74c3c;"><strong><a href="../cdn-cgi/l/email-protection.html" class="__cf_email__" data-cfemail="335b5c47415c7354495c5d561d455d">[email&#160;protected]</a></strong></span>.</p>
+<p>Mọi thắc mắc hay sự cố ph&aacute;t sinh trong qu&aacute; tr&igrave;nh nạp c&aacute;c Chủ Nh&acirc;n c&oacute; thể li&ecirc;n hệ về <a href="https://www.facebook.com/waifu.gzone"><span style="color:#e74c3c;"><strong>inbox Fanpage</strong></span></a>, hotline&nbsp;<span style="color:#e74c3c;"><strong>1900088885</strong></span> hoặc website hỗ trợ:&nbsp;<span style="color:#e74c3c;"><strong><a href="../cdn-cgi/l/email-protection.html" class="__cf_email__" data-cfemail="254d4a51574a65425f4a4b400b534b">[email&#160;protected]</a></strong></span>.</p>
 
 <p>&nbsp;</p>
 
@@ -831,7 +834,7 @@
                     </div>
                     <p>
                         Bản quyền © 2020 Gzone <br>
-                        Email: <a href="../cdn-cgi/l/email-protection.html" class="__cf_email__" data-cfemail="6c2403181e032c2b16030209421a02">[email&#160;protected]</a> | Hotline: 1900 088 885 <br>
+                        Email: <a href="../cdn-cgi/l/email-protection.html" class="__cf_email__" data-cfemail="e0a88f94928fa0a79a8f8e85ce968e">[email&#160;protected]</a> | Hotline: 1900 088 885 <br>
                         Thời gian: 8:00 - 22:00 tất cả các ngày (GMT + 7) <br>
                         Quyết định phê duyệt nội dung kịch trò chơi điện tử G1 Số 40/QĐ - BTTTT cấp ngày 18/02/2025
                         <br>
@@ -1110,5 +1113,5 @@
 </body>
 
 
-<!-- Mirrored from waifu.zoneplay.vn/huong-dan/huong-dan-nap-game-waifu-party-gzone by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 14 Aug 2025 12:40:36 GMT -->
+%n
 </html>
