--- a/waifu.zoneplay.vn/su-kien/su-kien-dai-chien-chung-toc.html
+++ b/waifu.zoneplay.vn/su-kien/su-kien-dai-chien-chung-toc.html
@@ -27,7 +27,7 @@
 <html lang="en">
 
 
-<!-- Mirrored from waifu.zoneplay.vn/su-kien/su-kien-dai-chien-chung-toc by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 14 Aug 2025 12:41:06 GMT -->
+%n
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
     <meta charset="UTF-8">
@@ -541,7 +541,10 @@
                             </div>
                         </div>
                         <div class="link_download">
-                                                                                </div>
+                                                                                        <a href= https://apps.apple.com/vn/app/id6741651912>
+                                    <img src="https://cdn.gzone.tech/g29/home2024-11-19/publics/images/down-appstore.png" width="100%" alt="">
+                                </a>
+                                                    </div>
                         <div class="btn_menu_mobile">
                             <div class="item_menu top"></div>
                             <div class="item_menu center"></div>
@@ -826,7 +829,7 @@
                     </div>
                     <p>
                         Bản quyền © 2020 Gzone <br>
-                        Email: <a href="../cdn-cgi/l/email-protection.html" class="__cf_email__" data-cfemail="8dc5e2f9ffe2cdcaf7e2e3e8a3fbe3">[email&#160;protected]</a> | Hotline: 1900 088 885 <br>
+                        Email: <a href="../cdn-cgi/l/email-protection.html" class="__cf_email__" data-cfemail="e3ab8c97918ca3a4998c8d86cd958d">[email&#160;protected]</a> | Hotline: 1900 088 885 <br>
                         Thời gian: 8:00 - 22:00 tất cả các ngày (GMT + 7) <br>
                         Quyết định phê duyệt nội dung kịch trò chơi điện tử G1 Số 40/QĐ - BTTTT cấp ngày 18/02/2025
                         <br>
@@ -1105,5 +1108,5 @@
 </body>
 
 
-<!-- Mirrored from waifu.zoneplay.vn/su-kien/su-kien-dai-chien-chung-toc by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 14 Aug 2025 12:41:06 GMT -->
+%n
 </html>
