--- a/waifu.zoneplay.vn/huong-dan/tieu-diem-tuong-ca-phe-meo.html
+++ b/waifu.zoneplay.vn/huong-dan/tieu-diem-tuong-ca-phe-meo.html
@@ -27,7 +27,7 @@
 <html lang="en">
 
 
-<!-- Mirrored from waifu.zoneplay.vn/huong-dan/tieu-diem-tuong-ca-phe-meo by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 14 Aug 2025 12:40:56 GMT -->
+%n
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
     <meta charset="UTF-8">
@@ -541,7 +541,10 @@
                             </div>
                         </div>
                         <div class="link_download">
-                                                                                </div>
+                                                                                        <a href= https://apps.apple.com/vn/app/id6741651912>
+                                    <img src="https://cdn.gzone.tech/g29/home2024-11-19/publics/images/down-appstore.png" width="100%" alt="">
+                                </a>
+                                                    </div>
                         <div class="btn_menu_mobile">
                             <div class="item_menu top"></div>
                             <div class="item_menu center"></div>
@@ -866,7 +869,7 @@ G&acirc;y cho to&agrave;n thể địch 128% ST Vật L&yacute;, với mục ti&
                     </div>
                     <p>
                         Bản quyền © 2020 Gzone <br>
-                        Email: <a href="../cdn-cgi/l/email-protection.html" class="__cf_email__" data-cfemail="e7af88939588a7a09d888982c99189">[email&#160;protected]</a> | Hotline: 1900 088 885 <br>
+                        Email: <a href="../cdn-cgi/l/email-protection.html" class="__cf_email__" data-cfemail="e5ad8a91978aa5a29f8a8b80cb938b">[email&#160;protected]</a> | Hotline: 1900 088 885 <br>
                         Thời gian: 8:00 - 22:00 tất cả các ngày (GMT + 7) <br>
                         Quyết định phê duyệt nội dung kịch trò chơi điện tử G1 Số 40/QĐ - BTTTT cấp ngày 18/02/2025
                         <br>
@@ -1145,5 +1148,5 @@ G&acirc;y cho to&agrave;n thể địch 128% ST Vật L&yacute;, với mục ti&
 </body>
 
 
-<!-- Mirrored from waifu.zoneplay.vn/huong-dan/tieu-diem-tuong-ca-phe-meo by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 14 Aug 2025 12:40:56 GMT -->
+%n
 </html>
