--- a/waifu.zoneplay.vn/huong-dan/tieu-diem-tuong-keo-rau-rong.html
+++ b/waifu.zoneplay.vn/huong-dan/tieu-diem-tuong-keo-rau-rong.html
@@ -27,7 +27,7 @@
 <html lang="en">
 
 
-<!-- Mirrored from waifu.zoneplay.vn/huong-dan/tieu-diem-tuong-keo-rau-rong by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 14 Aug 2025 12:40:55 GMT -->
+%n
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
     <meta charset="UTF-8">
@@ -541,7 +541,10 @@
                             </div>
                         </div>
                         <div class="link_download">
-                                                                                </div>
+                                                                                        <a href= https://apps.apple.com/vn/app/id6741651912>
+                                    <img src="https://cdn.gzone.tech/g29/home2024-11-19/publics/images/down-appstore.png" width="100%" alt="">
+                                </a>
+                                                    </div>
                         <div class="btn_menu_mobile">
                             <div class="item_menu top"></div>
                             <div class="item_menu center"></div>
@@ -867,7 +870,7 @@ To&agrave;n đội phe ta th&ecirc;m 1 [Du Long], k&eacute;o d&agrave;i 1 lượ
                     </div>
                     <p>
                         Bản quyền © 2020 Gzone <br>
-                        Email: <a href="../cdn-cgi/l/email-protection.html" class="__cf_email__" data-cfemail="e4ac8b90968ba4a39e8b8a81ca928a">[email&#160;protected]</a> | Hotline: 1900 088 885 <br>
+                        Email: <a href="../cdn-cgi/l/email-protection.html" class="__cf_email__" data-cfemail="21694e55534e61665b4e4f440f574f">[email&#160;protected]</a> | Hotline: 1900 088 885 <br>
                         Thời gian: 8:00 - 22:00 tất cả các ngày (GMT + 7) <br>
                         Quyết định phê duyệt nội dung kịch trò chơi điện tử G1 Số 40/QĐ - BTTTT cấp ngày 18/02/2025
                         <br>
@@ -1146,5 +1149,5 @@ To&agrave;n đội phe ta th&ecirc;m 1 [Du Long], k&eacute;o d&agrave;i 1 lượ
 </body>
 
 
-<!-- Mirrored from waifu.zoneplay.vn/huong-dan/tieu-diem-tuong-keo-rau-rong by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 14 Aug 2025 12:40:55 GMT -->
+%n
 </html>
