--- a/waifu.zoneplay.vn/index.html
+++ b/waifu.zoneplay.vn/index.html
@@ -16,7 +16,7 @@
 <html lang="en">
 
 
-<!-- Mirrored from waifu.zoneplay.vn/ by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 14 Aug 2025 12:39:29 GMT -->
+%n
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
     <meta charset="UTF-8">
@@ -530,7 +530,10 @@
                             </div>
                         </div>
                         <div class="link_download">
-                                                                                </div>
+                                                                                        <a href= https://apps.apple.com/vn/app/id6741651912>
+                                    <img src="https://cdn.gzone.tech/g29/home2024-11-19/publics/images/down-appstore.png" width="100%" alt="">
+                                </a>
+                                                    </div>
                         <div class="btn_menu_mobile">
                             <div class="item_menu top"></div>
                             <div class="item_menu center"></div>
@@ -1504,7 +1507,7 @@
                     </div>
                     <p>
                         Bản quyền © 2020 Gzone <br>
-                        Email: <a href="cdn-cgi/l/email-protection.html" class="__cf_email__" data-cfemail="de96b1aaacb19e99a4b1b0bbf0a8b0">[email&#160;protected]</a> | Hotline: 1900 088 885 <br>
+                        Email: <a href="cdn-cgi/l/email-protection.html" class="__cf_email__" data-cfemail="dd95b2a9afb29d9aa7b2b3b8f3abb3">[email&#160;protected]</a> | Hotline: 1900 088 885 <br>
                         Thời gian: 8:00 - 22:00 tất cả các ngày (GMT + 7) <br>
                         Quyết định phê duyệt nội dung kịch trò chơi điện tử G1 Số 40/QĐ - BTTTT cấp ngày 18/02/2025
                         <br>
@@ -1783,5 +1786,5 @@
 </body>
 
 
-<!-- Mirrored from waifu.zoneplay.vn/ by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 14 Aug 2025 12:39:31 GMT -->
+%n
 </html>
