--- a/waifu.zoneplay.vn/tin-tuc/cong-bo-bxh-dua-top-lien-server.html
+++ b/waifu.zoneplay.vn/tin-tuc/cong-bo-bxh-dua-top-lien-server.html
@@ -27,7 +27,7 @@
 <html lang="en">
 
 
-<!-- Mirrored from waifu.zoneplay.vn/tin-tuc/cong-bo-bxh-dua-top-lien-server by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 14 Aug 2025 12:40:41 GMT -->
+%n
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
     <meta charset="UTF-8">
@@ -541,7 +541,10 @@
                             </div>
                         </div>
                         <div class="link_download">
-                                                                                </div>
+                                                                                        <a href= https://apps.apple.com/vn/app/id6741651912>
+                                    <img src="https://cdn.gzone.tech/g29/home2024-11-19/publics/images/down-appstore.png" width="100%" alt="">
+                                </a>
+                                                    </div>
                         <div class="btn_menu_mobile">
                             <div class="item_menu top"></div>
                             <div class="item_menu center"></div>
@@ -797,7 +800,7 @@
                     </div>
                     <p>
                         Bản quyền © 2020 Gzone <br>
-                        Email: <a href="../cdn-cgi/l/email-protection.html" class="__cf_email__" data-cfemail="337b5c47415c7374495c5d561d455d">[email&#160;protected]</a> | Hotline: 1900 088 885 <br>
+                        Email: <a href="../cdn-cgi/l/email-protection.html" class="__cf_email__" data-cfemail="b0f8dfc4c2dff0f7cadfded59ec6de">[email&#160;protected]</a> | Hotline: 1900 088 885 <br>
                         Thời gian: 8:00 - 22:00 tất cả các ngày (GMT + 7) <br>
                         Quyết định phê duyệt nội dung kịch trò chơi điện tử G1 Số 40/QĐ - BTTTT cấp ngày 18/02/2025
                         <br>
@@ -1076,5 +1079,5 @@
 </body>
 
 
-<!-- Mirrored from waifu.zoneplay.vn/tin-tuc/cong-bo-bxh-dua-top-lien-server by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 14 Aug 2025 12:40:41 GMT -->
+%n
 </html>
